--- a/UnityProject/.gitignore
+++ b/UnityProject/.gitignore
@@ -2,6 +2,7 @@
 [Oo]bj/
 [Bb]uild
 /Library/FailedAssetImports.txt
+/Library/CrashedAssetImports.txt
 /Library/cache/
 /Library/previews/
 /Library/ScriptAssemblies
