messing around with alternate friction models; trying to figure out the inputs/outputs for the open-source wheel-collider replacement from a few years ago

--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Component\KSPWheelComponent.cs" />
     <Compile Include="PartModule\KSPWheelAnimationState.cs" />
     <Compile Include="PartModule\KSPWheelInfo.cs" />
+    <Compile Include="PhysicsModel\KSPFrictionCurve.cs" />
     <Compile Include="PhysicsModel\KSPWheelDefaultFrictionModel.cs" />
     <Compile Include="PhysicsModel\KSPWheelPhysicsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
