--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="Component\KSPWheelCollider.cs" />
     <Compile Include="Component\KSPWheelComponent.cs" />
+    <Compile Include="Component\LFWheelGrip.cs" />
     <Compile Include="Component\WheelColliderSource.cs" />
     <Compile Include="Component\WheelHitSource.cs" />
     <Compile Include="PartModule\KSPWheelAnimationState.cs" />
