--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -89,6 +89,9 @@
     <Compile Include="Component\WheelHitSource.cs" />
     <Compile Include="PartModule\KSPWheelAnimationState.cs" />
     <Compile Include="PartModule\KSPWheelInfo.cs" />
+    <Compile Include="PartModule\KSPWheelState.cs" />
+    <Compile Include="PartModule\Utils.cs" />
+    <Compile Include="PartModule\WheelAnimationHandler.cs" />
     <Compile Include="PhysicsModel\KSPFrictionCurve.cs" />
     <Compile Include="PhysicsModel\KSPWheelDefaultFrictionModel.cs" />
     <Compile Include="PhysicsModel\KSPWheelPhysicsModel.cs" />
