--- a/UnityProject/UnityProject.CSharp.csproj
+++ b/UnityProject/UnityProject.CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\Scripts\KSPWheelCollider.cs" />
     <Compile Include="Assets\Scripts\KSPWheelComponent.cs" />
     <Compile Include="Assets\Scripts\KSPWheelDefaultFrictionModel.cs" />
+    <Compile Include="Assets\Scripts\KSPWheelFrictionCurve.cs" />
     <Compile Include="Assets\Scripts\KSPWheelPhysicsModel.cs" />
     <Compile Include="Assets\Scripts\LFWheelGrip.cs" />
     <Compile Include="Assets\Scripts\WheelColliderSource.cs" />
