* work on stock-replacement part-module; it works now for the most part. * clean up stock-replacement module patch file for initial test wheel

--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -10,7 +10,8 @@
 	{
 		name = KSPWheelModule
 		wheelColliderName = WheelCollider
-		wheelName = WheelPivot
+		wheelPivotName = WheelPivot
+		wheelName = wheel
 		bustedWheelName = bustedwheel
 		suspensionName = SuspensionPivot
 		steeringName = SteeringPivot		
@@ -18,11 +19,11 @@
 		wheelMass = 0.040
 		suspensionTravel = 0.195
 		suspensionTarget = 0.2
-		suspensionOffset = -0.05
-		suspensionSpring = 100
-		suspensionDamper = 40
+		//suspensionOffset = -0.05
+		suspensionSpring = 25
+		suspensionDamper = 200
 		maxSteeringAngle = 40
-		maxMotorTorque = 12
+		maxMotorTorque = 0.5
 		maxBrakeTorque = 12		
 	}
 }
