* most things seem to be working as far as stock wheels are concerned * suspension spring causes crazy impulses on first tick; likely because damper has not kicked in   * ignore or self-dampen first-tick suspension response? * still need to find a reliable way to prevent punch-through   * current thoughts are a specially positioned and sized collider     * sized same as wheel     * placed into the model at the top of suspension travel     * this prevents punch-through at max suspension compression     * also allows for '0 suspension' setups (though... they have no down-force?.... can query collider/collision for impact force?)

--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -1,3 +1,4 @@
+//roverWheelS2
 @PART[roverWheel2]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -24,6 +25,98 @@
 		suspensionDamper = 200
 		maxSteeringAngle = 40
 		maxMotorTorque = 0.5
+		maxBrakeTorque = 12		
+	}
+}
+//roverWheelM1
+@PART[roverWheel1]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelSteering]{}
+	-MODULE[ModuleWheelMotor]{}
+	-MODULE[ModuleWheelBrakes]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		wheelColliderName = WheelCollider
+		suspensionName = suspensionPivot
+		steeringName = SteeringPivot		
+		wheelPivotName = WheelPivot
+		wheelName = wheel
+		bustedWheelName = wheelDamaged
+		wheelRadius = 0.378
+		wheelMass = 0.040
+		suspensionTravel = 0.2
+		suspensionTarget = 0.5
+		suspensionOffset = 0
+		suspensionSpring = 100
+		suspensionDamper = 400
+		maxSteeringAngle = 30
+		maxMotorTorque = 30
+		maxBrakeTorque = 30	
+	}
+}
+
+//roverWheelTR-2L
+@PART[wheelMed]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelSteering]{}
+	-MODULE[ModuleWheelMotor]{}
+	-MODULE[ModuleWheelBrakes]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		wheelColliderName = WheelCollider
+		suspensionName = SuspensionPivot
+		steeringName = SteeringPivot		
+		wheelPivotName = WheelPivot
+		wheelName = wheel
+		bustedWheelName = bustedWheel
+		wheelRadius = 0.58
+		wheelMass = 0.040
+		suspensionTravel = 0.125
+		suspensionTarget = 0.5
+		suspensionOffset = 0
+		suspensionSpring = 100
+		suspensionDamper = 400
+		maxSteeringAngle = 30
+		maxMotorTorque = 58
+		maxBrakeTorque = 12		
+	}
+}
+
+//roverWheelXL3
+@PART[roverWheel3]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelMotorSteering]{}
+	-MODULE[ModuleWheelMotor]{}
+	-MODULE[ModuleWheelBrakes]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		wheelColliderName = WheelCollider
+		suspensionName = SuspensionPivot
+		//steeringName = SteeringPivot //no steering transform on this wheel
+		wheelPivotName = WheelPivot
+		wheelName = wheel
+		bustedWheelName = bustedWheel
+		wheelRadius = 1
+		wheelMass = 0.8
+		suspensionTravel = 0.25
+		suspensionTarget = 0.5
+		suspensionOffset = 0
+		suspensionSpring = 400
+		suspensionDamper = 800
+		maxSteeringAngle = 0
+		maxMotorTorque = 15
 		maxBrakeTorque = 12		
 	}
 }
