more work on wheel patch and stock-replacement module more comments on the friction code fix calculation of rpm into being actually rpm, add utility method for per-frame rotation add throttle-response speed setting, greatly aids in reducing spin-outs as there is no more instantaneous torques from the motor, it gradually builds over a few frames; this is a bit of a workaround at the moment and is a type of traction control, but aids greatly in acceleration from a standstill for slightly-overpowered motors

--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -20,7 +20,7 @@
 		wheelMass = 0.040
 		suspensionTravel = 0.195
 		suspensionTarget = 0.2
-		//suspensionOffset = -0.05
+		suspensionOffset = -0.04
 		suspensionSpring = 25
 		suspensionDamper = 200
 		maxSteeringAngle = 40
@@ -50,7 +50,7 @@
 		wheelMass = 0.040
 		suspensionTravel = 0.2
 		suspensionTarget = 0.5
-		suspensionOffset = 0
+		suspensionOffset = -0.1
 		suspensionSpring = 100
 		suspensionDamper = 400
 		maxSteeringAngle = 30
@@ -81,7 +81,7 @@
 		wheelMass = 0.040
 		suspensionTravel = 0.125
 		suspensionTarget = 0.5
-		suspensionOffset = 0
+		suspensionOffset = -0.0625
 		suspensionSpring = 100
 		suspensionDamper = 400
 		maxSteeringAngle = 30
@@ -104,7 +104,6 @@
 		name = KSPWheelModule
 		wheelColliderName = WheelCollider
 		suspensionName = SuspensionPivot
-		//steeringName = SteeringPivot //no steering transform on this wheel
 		wheelPivotName = WheelPivot
 		wheelName = wheel
 		bustedWheelName = bustedWheel
@@ -116,7 +115,167 @@
 		suspensionSpring = 400
 		suspensionDamper = 800
 		maxSteeringAngle = 0
+		tankSteering = true
 		maxMotorTorque = 15
 		maxBrakeTorque = 12		
 	}
 }
+
+//LY-01 Fixed Landing Gear
+// @PART[GearFixed]
+// {
+	// -MODULE[ModuleWheelBase]{}
+	// -MODULE[ModuleWheelSuspension]{}
+	// -MODULE[ModuleWheelBrakes]{}
+	// -MODULE[ModuleWheelDamage]{}
+	// MODULE
+	// {
+		// name = KSPWheelModule
+		// wheelColliderName = WheelCollider
+		// suspensionName = FixedWheel
+		// wheelPivotName = WheelPivot
+		// wheelRadius = 1
+		// wheelMass = 0.8
+		// suspensionTravel = 0.2
+		// suspensionTarget = 0.6
+		// suspensionOffset = 0
+		// suspensionSpring = 1000
+		// suspensionDamper = 10000
+		// maxSteeringAngle = 0
+		// maxMotorTorque = 0
+		// maxBrakeTorque = 12		
+	// }
+// }
+
+//LY-05 Steerable Landing Gear
+// @PART[GearFree]
+// {
+	// -MODULE[ModuleWheelBase]{}
+	// -MODULE[ModuleWheelSuspension]{}
+	// -MODULE[ModuleWheelSteering]{}
+	// -MODULE[ModuleWheelDamage]{}
+	// MODULE
+	// {
+		// name = KSPWheelModule
+		// wheelColliderName = WheelCollider
+		// suspensionName = suspension
+		// steeringName = SteeringPivot
+		// wheelPivotName = wheel
+		// wheelRadius = 1
+		// wheelMass = 0.8
+		// suspensionTravel = 0.1
+		// suspensionTarget = 0.9
+		// suspensionOffset = 0
+		// suspensionSpring = 400
+		// suspensionDamper = 800
+		// maxSteeringAngle = 0
+		// tankSteering = true
+		// maxMotorTorque = 15
+		// maxBrakeTorque = 12		
+	// }
+// }
+// @PART[SmallGearBay]
+// {
+	// -MODULE[ModuleWheelBase]{}
+	// -MODULE[ModuleWheelSuspension]{}
+	// -MODULE[ModuleWheelSteering]{}
+	// -MODULE[ModuleWheelDamage]{}
+	// MODULE
+	// {
+		// name = KSPWheelModule
+		// wheelColliderName = WheelCollider
+		// suspensionName = SuspensionPivot
+		// steeringName = SteeringPivot
+		// wheelPivotName = WheelPivot
+		// wheelRadius = 1
+		// wheelMass = 0.8
+		// suspensionTravel = 0.1
+		// suspensionTarget = 0.9
+		// suspensionOffset = 0
+		// suspensionSpring = 400
+		// suspensionDamper = 800
+		// maxSteeringAngle = 0
+		// tankSteering = true
+		// maxMotorTorque = 15
+		// maxBrakeTorque = 12		
+	// }
+// }
+
+// @PART[GearSmall]
+// {
+	// -MODULE[ModuleWheelBase]{}
+	// -MODULE[ModuleWheelSuspension]{}
+	// -MODULE[ModuleWheelSteering]{}
+	// -MODULE[ModuleWheelDamage]{}
+	// MODULE
+	// {
+		// name = KSPWheelModule
+		// wheelColliderName = WheelCollider
+		// suspensionName = SuspensionPivot
+		// steeringName = SteeringPivot
+		// wheelPivotName = WheelPivot
+		// wheelRadius = 1
+		// wheelMass = 0.8
+		// suspensionTravel = 0.1
+		// suspensionTarget = 0.9
+		// suspensionOffset = 0
+		// suspensionSpring = 400
+		// suspensionDamper = 800
+		// maxSteeringAngle = 0
+		// tankSteering = true
+		// maxMotorTorque = 15
+		// maxBrakeTorque = 12		
+	// }
+// }
+
+// @PART[GearMedium]
+// {
+	// -MODULE[ModuleWheelBase]{}
+	// -MODULE[ModuleWheelSuspension]{}
+	// -MODULE[ModuleWheelSteering]{}
+	// -MODULE[ModuleWheelDamage]{}
+	// MODULE
+	// {
+		// name = KSPWheelModule
+		// wheelColliderName = WheelCollider
+		// suspensionName = SuspensionPivot
+		// wheelPivotName = WheelPivot
+		// wheelRadius = 1
+		// wheelMass = 0.8
+		// suspensionTravel = 0.1
+		// suspensionTarget = 0.9
+		// suspensionOffset = 0
+		// suspensionSpring = 400
+		// suspensionDamper = 800
+		// maxSteeringAngle = 0
+		// tankSteering = true
+		// maxMotorTorque = 15
+		// maxBrakeTorque = 12		
+	// }
+// }
+
+// @PART[GearLarge]
+// {
+	// -MODULE[ModuleWheelBase]{}
+	// -MODULE[ModuleWheelSuspension]{}
+	// -MODULE[ModuleWheelSteering]{}
+	// -MODULE[ModuleWheelDamage]{}
+	// MODULE
+	// {
+		// name = KSPWheelModule
+		// wheelColliderName = WheelCollider
+		// suspensionName = SuspensionPivot
+		// // wheelPivotName = WheelPivot //needs special handling for multiple rotating wheels
+		// wheelRadius = 1
+		// wheelMass = 0.8
+		// suspensionTravel = 0.1
+		// suspensionTarget = 0.9
+		// suspensionOffset = 0
+		// suspensionSpring = 400
+		// suspensionDamper = 800
+		// maxSteeringAngle = 0
+		// tankSteering = true
+		// maxMotorTorque = 15
+		// maxBrakeTorque = 12		
+	// }
+// }
