* fix up stock-replacement part-module to be not so crashy;   * delay creation of wheel collider until part has a rigidbody * fix finding of transforms to ignore empty transform names (else it was returning the first model transform incorrectly) * fix setting of wheel radius to use config specified value if available, default to wheel-collider value if not specified in config * finish up handling of locating multiple wheel pivot transforms * add a wheel-collider offset field that determines positioning of WC relative to the model position (moves upwards by XX amount)

--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -11,16 +11,17 @@
 	{
 		name = KSPWheelModule
 		wheelColliderName = WheelCollider
+		wheelColliderOffset = 0.1939
 		wheelPivotName = WheelPivot
 		wheelName = wheel
 		bustedWheelName = bustedwheel
 		suspensionName = SuspensionPivot
 		steeringName = SteeringPivot		
-		wheelRadius = 0.157
+		wheelRadius = 0.1575
 		wheelMass = 0.040
 		suspensionTravel = 0.195
 		suspensionTarget = 0.2
-		suspensionOffset = -0.04
+		suspensionOffset = 0
 		suspensionSpring = 25
 		suspensionDamper = 4
 		maxSteeringAngle = 40
@@ -29,6 +30,8 @@
 	}
 }
 //roverWheelM1
+//has rescaleFactor = 1.25 (default, unspecified in config)
+//thus some of these values differ from the stock specified values (no clue how they handle the rescale for wheels...)
 @PART[roverWheel1]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -37,20 +40,22 @@
 	-MODULE[ModuleWheelMotor]{}
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
+	// %rescaleFactor = 1
 	MODULE
 	{
 		name = KSPWheelModule
 		wheelColliderName = WheelCollider
+		wheelColliderOffset = 0.25
 		suspensionName = suspensionPivot
 		steeringName = SteeringPivot		
 		wheelPivotName = WheelPivot
 		wheelName = wheel
 		bustedWheelName = wheelDamaged
-		wheelRadius = 0.378
+		wheelRadius = 0.47375
 		wheelMass = 0.040
-		suspensionTravel = 0.2
-		suspensionTarget = 0.5
-		suspensionOffset = -0.1
+		suspensionTravel = 0.25
+		suspensionTarget = 0.2
+		suspensionOffset = 0
 		suspensionSpring = 100
 		suspensionDamper = 20
 		maxSteeringAngle = 30
@@ -72,16 +77,17 @@
 	{
 		name = KSPWheelModule
 		wheelColliderName = WheelCollider
+		wheelColliderOffset = 0.125
 		suspensionName = SuspensionPivot
 		steeringName = SteeringPivot		
 		wheelPivotName = WheelPivot
 		wheelName = wheel
-		bustedWheelName = bustedWheel
+		bustedWheelName = bustedwheel
 		wheelRadius = 0.58
 		wheelMass = 0.040
 		suspensionTravel = 0.125
-		suspensionTarget = 0.5
-		suspensionOffset = -0.0625
+		suspensionTarget = 0.2
+		suspensionOffset = 0
 		suspensionSpring = 100
 		suspensionDamper = 20
 		maxSteeringAngle = 30
@@ -96,110 +102,116 @@
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelMotorSteering]{}
-	-MODULE[ModuleWheelMotor]{}
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
 	MODULE
 	{
 		name = KSPWheelModule
 		wheelColliderName = WheelCollider
+		wheelColliderOffset = 0.25
 		suspensionName = SuspensionPivot
 		wheelPivotName = WheelPivot
 		wheelName = wheel
-		bustedWheelName = bustedWheel
+		bustedWheelName = bustedwheel
 		wheelRadius = 1
 		wheelMass = 0.8
 		suspensionTravel = 0.25
-		suspensionTarget = 0.5
+		suspensionTarget = 0.2
 		suspensionOffset = 0
 		suspensionSpring = 400
 		suspensionDamper = 80
+		maxSteeringAngle = 0
+		tankSteering = true
+		maxMotorTorque = 50
+		maxBrakeTorque = 40		
+	}
+}
+
+//LY-01 Fixed Landing Gear
+@PART[GearFixed]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelBrakes]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		wheelColliderName = WheelCollider
+		wheelColliderOffset = 0.065
+		wheelPivotName = WheelPivot
+		wheelRadius = 0.2
+		wheelMass = 0.04
+		suspensionTravel = 0.09
+		suspensionTarget = 0.2
+		suspensionOffset = 0
+		suspensionSpring = 250
+		suspensionDamper = 50
+		maxSteeringAngle = 0
+		maxMotorTorque = 0
+		maxBrakeTorque = 12		
+	}
+}
+
+//LY-05 Steerable Landing Gear
+@PART[GearFree]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelSteering]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		wheelColliderName = WheelCollider
+		wheelColliderOffset = -0.075
+		suspensionName = suspension
+		steeringName = SteeringPivot
+		wheelPivotName = wheel
+		wheelRadius = 0.198
+		wheelMass = 0.04
+		suspensionTravel = 0.05
+		suspensionTarget = 0.2
+		suspensionOffset = 0
+		suspensionSpring = 250
+		suspensionDamper = 50
+		maxSteeringAngle = 20
+		maxMotorTorque = 0
+		maxBrakeTorque = 12		
+	}
+}
+
+@PART[SmallGearBay]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelSteering]{}
+	-MODULE[ModuleWheelDeployment]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		animationName = LandingGearSmallDeploy
+		wheelColliderOffset = 0.12
+		wheelColliderName = WheelCollider
+		suspensionName = SuspensionPivot
+		steeringName = SteeringPivot
+		wheelPivotName = WheelPivot
+		lightName = Lamp
+		indicatorName = BrakeIndicator
+		wheelRadius = 0.18
+		wheelMass = 0.04
+		suspensionTravel = 0.12
+		suspensionTarget = 0.2
+		suspensionOffset = 0
+		suspensionSpring = 400
+		suspensionDamper = 800
 		maxSteeringAngle = 0
 		tankSteering = true
 		maxMotorTorque = 15
 		maxBrakeTorque = 12		
 	}
 }
-
-//LY-01 Fixed Landing Gear
-// @PART[GearFixed]
-// {
-	// -MODULE[ModuleWheelBase]{}
-	// -MODULE[ModuleWheelSuspension]{}
-	// -MODULE[ModuleWheelBrakes]{}
-	// -MODULE[ModuleWheelDamage]{}
-	// MODULE
-	// {
-		// name = KSPWheelModule
-		// wheelColliderName = WheelCollider
-		// suspensionName = FixedWheel
-		// wheelPivotName = WheelPivot
-		// wheelRadius = 1
-		// wheelMass = 0.8
-		// suspensionTravel = 0.2
-		// suspensionTarget = 0.6
-		// suspensionOffset = 0
-		// suspensionSpring = 1000
-		// suspensionDamper = 10000
-		// maxSteeringAngle = 0
-		// maxMotorTorque = 0
-		// maxBrakeTorque = 12		
-	// }
-// }
-
-//LY-05 Steerable Landing Gear
-// @PART[GearFree]
-// {
-	// -MODULE[ModuleWheelBase]{}
-	// -MODULE[ModuleWheelSuspension]{}
-	// -MODULE[ModuleWheelSteering]{}
-	// -MODULE[ModuleWheelDamage]{}
-	// MODULE
-	// {
-		// name = KSPWheelModule
-		// wheelColliderName = WheelCollider
-		// suspensionName = suspension
-		// steeringName = SteeringPivot
-		// wheelPivotName = wheel
-		// wheelRadius = 1
-		// wheelMass = 0.8
-		// suspensionTravel = 0.1
-		// suspensionTarget = 0.9
-		// suspensionOffset = 0
-		// suspensionSpring = 400
-		// suspensionDamper = 800
-		// maxSteeringAngle = 0
-		// tankSteering = true
-		// maxMotorTorque = 15
-		// maxBrakeTorque = 12		
-	// }
-// }
-// @PART[SmallGearBay]
-// {
-	// -MODULE[ModuleWheelBase]{}
-	// -MODULE[ModuleWheelSuspension]{}
-	// -MODULE[ModuleWheelSteering]{}
-	// -MODULE[ModuleWheelDamage]{}
-	// MODULE
-	// {
-		// name = KSPWheelModule
-		// wheelColliderName = WheelCollider
-		// suspensionName = SuspensionPivot
-		// steeringName = SteeringPivot
-		// wheelPivotName = WheelPivot
-		// wheelRadius = 1
-		// wheelMass = 0.8
-		// suspensionTravel = 0.1
-		// suspensionTarget = 0.9
-		// suspensionOffset = 0
-		// suspensionSpring = 400
-		// suspensionDamper = 800
-		// maxSteeringAngle = 0
-		// tankSteering = true
-		// maxMotorTorque = 15
-		// maxBrakeTorque = 12		
-	// }
-// }
 
 // @PART[GearSmall]
 // {
@@ -215,7 +227,7 @@
 		// steeringName = SteeringPivot
 		// wheelPivotName = WheelPivot
 		// wheelRadius = 1
-		// wheelMass = 0.8
+		// wheelMass = 0.04
 		// suspensionTravel = 0.1
 		// suspensionTarget = 0.9
 		// suspensionOffset = 0
@@ -241,7 +253,7 @@
 		// suspensionName = SuspensionPivot
 		// wheelPivotName = WheelPivot
 		// wheelRadius = 1
-		// wheelMass = 0.8
+		// wheelMass = 0.04
 		// suspensionTravel = 0.1
 		// suspensionTarget = 0.9
 		// suspensionOffset = 0
@@ -267,7 +279,7 @@
 		// suspensionName = SuspensionPivot
 		// // wheelPivotName = WheelPivot //needs special handling for multiple rotating wheels
 		// wheelRadius = 1
-		// wheelMass = 0.8
+		// wheelMass = 0.04
 		// suspensionTravel = 0.1
 		// suspensionTarget = 0.9
 		// suspensionOffset = 0
