* more work on stock wheel support   * clean up handling of light and status lights   * clean up default values for animation layer/speed/name   * clean up animation state change handling   * fix action-group assignment for gear action * all wheels in patch file up to 'SmallGearBay' should work; 'SmallGearBay' -not- working yet

--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -186,6 +186,7 @@
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelSteering]{}
+	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDeployment]{}
 	-MODULE[ModuleWheelDamage]{}
 	MODULE
@@ -197,19 +198,16 @@
 		suspensionName = SuspensionPivot
 		steeringName = SteeringPivot
 		wheelPivotName = WheelPivot
-		lightName = Lamp
-		indicatorName = BrakeIndicator
 		wheelRadius = 0.18
 		wheelMass = 0.04
 		suspensionTravel = 0.12
 		suspensionTarget = 0.2
 		suspensionOffset = 0
-		suspensionSpring = 400
-		suspensionDamper = 800
-		maxSteeringAngle = 0
-		tankSteering = true
-		maxMotorTorque = 15
-		maxBrakeTorque = 12		
+		suspensionSpring = 100
+		suspensionDamper = 20
+		maxSteeringAngle = 25
+		maxMotorTorque = 0
+		maxBrakeTorque = 12
 	}
 }
 
@@ -232,11 +230,10 @@
 		// suspensionTarget = 0.9
 		// suspensionOffset = 0
 		// suspensionSpring = 400
-		// suspensionDamper = 800
-		// maxSteeringAngle = 0
-		// tankSteering = true
-		// maxMotorTorque = 15
-		// maxBrakeTorque = 12		
+		// suspensionDamper = 40
+		// maxSteeringAngle = 25
+		// maxMotorTorque = 0
+		// maxBrakeTorque = 12
 	// }
 // }
 
@@ -258,10 +255,9 @@
 		// suspensionTarget = 0.9
 		// suspensionOffset = 0
 		// suspensionSpring = 400
-		// suspensionDamper = 800
-		// maxSteeringAngle = 0
-		// tankSteering = true
-		// maxMotorTorque = 15
+		// suspensionDamper = 40
+		// maxSteeringAngle = 25
+		// maxMotorTorque = 0
 		// maxBrakeTorque = 12		
 	// }
 // }
@@ -284,10 +280,9 @@
 		// suspensionTarget = 0.9
 		// suspensionOffset = 0
 		// suspensionSpring = 400
-		// suspensionDamper = 800
-		// maxSteeringAngle = 0
-		// tankSteering = true
-		// maxMotorTorque = 15
+		// suspensionDamper = 40
+		// maxSteeringAngle = 25
+		// maxMotorTorque = 0
 		// maxBrakeTorque = 12		
 	// }
 // }
