* more work on wheelcollider physics model   * bit of toying with sticky-friction joint setup... need to find how to enable all of them to break   * work on trying to figure out how to deterministicly calculate sprung mass

--- a/UnityProject/UnityProject.CSharp.csproj
+++ b/UnityProject/UnityProject.CSharp.csproj
@@ -52,17 +52,11 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Analytics">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
@@ -82,6 +76,7 @@
     <Compile Include="Assets\Scripts\KSPWheelFrictionCurve.cs" />
     <Compile Include="Assets\Scripts\KSPWheelPhysicsModel.cs" />
     <Compile Include="Assets\Scripts\LFWheelGrip.cs" />
+    <Compile Include="Assets\Scripts\UnityVehicleController.cs" />
     <Compile Include="Assets\Scripts\WheelColliderSource.cs" />
     <Compile Include="Assets\Scripts\WheelHitSource.cs" />
   </ItemGroup>
