* a couple different methods to try and prevent over-compression/bump-stop/anti-punchthrough;   * time-based integration may be the best method, but will need a lot more work in order to function smoothly   * still no clue on how to know the exact force necessary to support the load without knowing the -actual- sprung mass

--- a/UnityProject/UnityProject.CSharp.csproj
+++ b/UnityProject/UnityProject.CSharp.csproj
@@ -52,11 +52,17 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Advertisements">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Analytics">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
@@ -72,13 +78,8 @@
     <Compile Include="Assets\Scripts\KSPFrictionCurve.cs" />
     <Compile Include="Assets\Scripts\KSPWheelCollider.cs" />
     <Compile Include="Assets\Scripts\KSPWheelComponent.cs" />
-    <Compile Include="Assets\Scripts\KSPWheelDefaultFrictionModel.cs" />
     <Compile Include="Assets\Scripts\KSPWheelFrictionCurve.cs" />
-    <Compile Include="Assets\Scripts\KSPWheelPhysicsModel.cs" />
     <Compile Include="Assets\Scripts\LFWheelGrip.cs" />
-    <Compile Include="Assets\Scripts\UnityVehicleController.cs" />
-    <Compile Include="Assets\Scripts\WheelColliderSource.cs" />
-    <Compile Include="Assets\Scripts\WheelHitSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Terrain\GrassTextures\license.txt" />
