more work on stock wheel handling, small gear bay mostly working, though there appears to be some jittering/oscillations that need to be tracked and sorted

--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -196,6 +196,7 @@
 		wheelColliderOffset = 0.12
 		wheelColliderName = WheelCollider
 		suspensionName = SuspensionPivot
+		suspensionAxis = 0,0,-1
 		steeringName = SteeringPivot
 		wheelPivotName = WheelPivot
 		wheelRadius = 0.18
