--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -212,78 +212,188 @@
 	}
 }
 
-// @PART[GearSmall]
-// {
-	// -MODULE[ModuleWheelBase]{}
-	// -MODULE[ModuleWheelSuspension]{}
-	// -MODULE[ModuleWheelSteering]{}
-	// -MODULE[ModuleWheelDamage]{}
-	// MODULE
-	// {
-		// name = KSPWheelModule
-		// wheelColliderName = WheelCollider
-		// suspensionName = SuspensionPivot
-		// steeringName = SteeringPivot
-		// wheelPivotName = WheelPivot
-		// wheelRadius = 1
-		// wheelMass = 0.04
-		// suspensionTravel = 0.1
-		// suspensionTarget = 0.9
-		// suspensionOffset = 0
-		// suspensionSpring = 400
-		// suspensionDamper = 40
-		// maxSteeringAngle = 25
-		// maxMotorTorque = 0
-		// maxBrakeTorque = 12
-	// }
-// }
+@PART[GearSmall]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelSteering]{}
+	-MODULE[ModuleWheelDeployment]{}
+	-MODULE[ModuleWheelBrakes]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		animationName = LandingGearMediumDeploy
+		wheelColliderName = WheelCollider
+		wheelColliderOffset = 0.2
+		suspensionName = SuspensionPivot
+		suspensionAxis = 0,0,-1		
+		steeringName = SteeringPivot
+		wheelPivotName = WheelPivot
+		wheelRadius = 0.2375
+		wheelMass = 0.04
+		suspensionTravel = 0.2
+		suspensionTarget = 0.2
+		suspensionOffset = 0
+		suspensionSpring = 400
+		suspensionDamper = 80
+		maxSteeringAngle = 25
+		maxMotorTorque = 0
+		maxBrakeTorque = 12
+	}
+}
 
-// @PART[GearMedium]
-// {
-	// -MODULE[ModuleWheelBase]{}
-	// -MODULE[ModuleWheelSuspension]{}
-	// -MODULE[ModuleWheelSteering]{}
-	// -MODULE[ModuleWheelDamage]{}
-	// MODULE
-	// {
-		// name = KSPWheelModule
-		// wheelColliderName = WheelCollider
-		// suspensionName = SuspensionPivot
-		// wheelPivotName = WheelPivot
-		// wheelRadius = 1
-		// wheelMass = 0.04
-		// suspensionTravel = 0.1
-		// suspensionTarget = 0.9
-		// suspensionOffset = 0
-		// suspensionSpring = 400
-		// suspensionDamper = 40
-		// maxSteeringAngle = 25
-		// maxMotorTorque = 0
-		// maxBrakeTorque = 12		
-	// }
-// }
+@PART[GearMedium]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelBrakes]{}
+	-MODULE[ModuleWheelDeployment]{}
+	-MODULE[ModuleWheelBogey]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		animationName = LandingGearLargeDeploy
+		wheelColliderName = WheelCollider
+		wheelColliderOffset = -0.277
+		suspensionName = SuspensionPivot
+		wheelPivotName = wheels1, wheels2
+		wheelRadius = 0.3
+		wheelMass = 0.04
+		suspensionTravel = 0.25
+		suspensionTarget = 0.2
+		suspensionOffset = 0
+		suspensionSpring = 400
+		suspensionDamper = 40
+		maxSteeringAngle = 0
+		maxMotorTorque = 0
+		maxBrakeTorque = 12		
+	}
+}
 
-// @PART[GearLarge]
-// {
-	// -MODULE[ModuleWheelBase]{}
-	// -MODULE[ModuleWheelSuspension]{}
-	// -MODULE[ModuleWheelSteering]{}
-	// -MODULE[ModuleWheelDamage]{}
-	// MODULE
-	// {
-		// name = KSPWheelModule
-		// wheelColliderName = WheelCollider
-		// suspensionName = SuspensionPivot
-		// // wheelPivotName = WheelPivot //needs special handling for multiple rotating wheels
-		// wheelRadius = 1
-		// wheelMass = 0.04
-		// suspensionTravel = 0.1
-		// suspensionTarget = 0.9
-		// suspensionOffset = 0
-		// suspensionSpring = 400
-		// suspensionDamper = 40
-		// maxSteeringAngle = 25
-		// maxMotorTorque = 0
-		// maxBrakeTorque = 12		
-	// }
-// }
+@PART[GearLarge]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelBrakes]{}
+	-MODULE[ModuleWheelDeployment]{}
+	-MODULE[ModuleWheelBogey]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		animationName = LandingGearExtraLargeDeploy2
+		wheelColliderName = WheelCollider
+		wheelColliderOffset = 0
+		suspensionName = SuspensionPivot
+		wheelPivotName = wheels1, wheels2
+		wheelRadius = 0.3
+		wheelMass = 0.04
+		suspensionTravel = 0.527
+		suspensionTarget = 0.2
+		suspensionOffset = 0
+		suspensionSpring = 400
+		suspensionDamper = 40
+		maxSteeringAngle = 0
+		maxMotorTorque = 0
+		maxBrakeTorque = 12		
+	}
+}
+
+@PART[landingLeg1]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelDeployment]{}
+	-MODULE[ModuleWheelLock]{}
+	-MODULE[ModuleWheelBogey]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		animationName = Deploy
+		wheelColliderName = wheelCollider
+		wheelColliderOffset = -0.05
+		suspensionName = Piston
+		suspensionAxis = 0,0,1
+		wheelRadius = 0.104
+		wheelMass = 0.04
+		suspensionTravel = 0.75
+		suspensionTarget = 0.2
+		suspensionOffset = -0.75
+		suspensionSpring = 400
+		suspensionDamper = 40
+		maxSteeringAngle = 0
+		maxMotorTorque = 0
+		maxBrakeTorque = 300
+		brakesLocked = true
+		bogeyName = foot
+		bogeyRotAxis = 1, 0, 0
+		bogeyUpAxis = 0, -1, 0
+	}
+}
+
+//no 'scale' listed, default=1?
+//has rescaleFactor = 1.25
+@PART[landingLeg1-2]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelDeployment]{}
+	-MODULE[ModuleWheelLock]{}
+	-MODULE[ModuleWheelBogey]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		animationName = newlandingleg
+		wheelColliderName = wheelCollider
+		wheelColliderOffset = 0
+		suspensionName = piston
+		suspensionAxis = 0,0,-1
+		wheelRadius = 0.12
+		wheelMass = 0.04
+		suspensionTravel = 0.95
+		suspensionTarget = 0.2
+		suspensionOffset = -0.95
+		suspensionSpring = 400
+		suspensionDamper = 40
+		maxSteeringAngle = 0
+		maxMotorTorque = 0
+		maxBrakeTorque = 300
+		brakesLocked = true
+		bogeyName = foot
+		bogeyRotAxis = 1, 0, 0
+		bogeyUpAxis = 0, -1, 0
+	}
+}
+
+@PART[miniLandingLeg]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelDeployment]{}
+	-MODULE[ModuleWheelLock]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		animationName = probeleg
+		wheelColliderName = wheelCollider
+		wheelColliderOffset = 0
+		suspensionName = leg
+		suspensionAxis = 0,0,-1
+		wheelRadius = 0.1
+		wheelMass = 0.04
+		suspensionTravel = 0.8
+		suspensionTarget = 0.2
+		suspensionOffset = -0.8
+		suspensionSpring = 400
+		suspensionDamper = 40
+		maxSteeringAngle = 0
+		maxMotorTorque = 0
+		maxBrakeTorque = 300
+		brakesLocked = true
+	}
+}
