more work on stock-replacement module; need to sort out the suspension positioning as its not proper yet

--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -16,6 +16,7 @@
 		wheelName = wheel
 		bustedWheelName = bustedwheel
 		suspensionName = SuspensionPivot
+		suspensionExtPos = -0.026
 		steeringName = SteeringPivot		
 		wheelRadius = 0.1575
 		wheelMass = 0.040
@@ -47,6 +48,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.25
 		suspensionName = suspensionPivot
+		suspensionExtPos = 0.09
 		steeringName = SteeringPivot		
 		wheelPivotName = WheelPivot
 		wheelName = wheel
@@ -79,6 +81,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.125
 		suspensionName = SuspensionPivot
+		suspensionExtPos = -0.198
 		steeringName = SteeringPivot		
 		wheelPivotName = WheelPivot
 		wheelName = wheel
@@ -110,6 +113,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.25
 		suspensionName = SuspensionPivot
+		suspensionExtPos = -0.662
 		wheelPivotName = WheelPivot
 		wheelName = wheel
 		bustedWheelName = bustedwheel
@@ -140,6 +144,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.065
 		wheelPivotName = WheelPivot
+		suspensionExtPos = -0.7
 		wheelRadius = 0.2
 		wheelMass = 0.04
 		suspensionTravel = 0.09
@@ -166,6 +171,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = -0.075
 		suspensionName = suspension
+		suspensionExtPos = -0.414
 		steeringName = SteeringPivot
 		wheelPivotName = wheel
 		wheelRadius = 0.198
@@ -181,6 +187,7 @@
 	}
 }
 
+//this is actually the 'small' gear
 @PART[SmallGearBay]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -196,6 +203,7 @@
 		wheelColliderOffset = 0.12
 		wheelColliderName = WheelCollider
 		suspensionName = SuspensionPivot
+		suspensionExtPos = 0.92507
 		suspensionAxis = 0,0,-1
 		steeringName = SteeringPivot
 		wheelPivotName = WheelPivot
@@ -212,6 +220,7 @@
 	}
 }
 
+//this is actually the 'medium' gear
 @PART[GearSmall]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -227,6 +236,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.2
 		suspensionName = SuspensionPivot
+		suspensionExtPos = 1.18750
 		suspensionAxis = 0,0,-1		
 		steeringName = SteeringPivot
 		wheelPivotName = WheelPivot
@@ -243,6 +253,7 @@
 	}
 }
 
+//this is actually the 'large' gear
 @PART[GearMedium]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -258,6 +269,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = -0.277
 		suspensionName = SuspensionPivot
+		suspensionExtPos = -1.51450
 		wheelPivotName = wheels1, wheels2
 		wheelRadius = 0.3
 		wheelMass = 0.04
@@ -272,6 +284,7 @@
 	}
 }
 
+//this is actually the 'extra-large' gear
 @PART[GearLarge]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -287,6 +300,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0
 		suspensionName = SuspensionPivot
+		suspensionExtPos = -2.2625
 		wheelPivotName = wheels1, wheels2
 		wheelRadius = 0.3
 		wheelMass = 0.04
@@ -301,6 +315,7 @@
 	}
 }
 
+//LT-01
 @PART[landingLeg1]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -316,14 +331,15 @@
 		wheelColliderName = wheelCollider
 		wheelColliderOffset = -0.05
 		suspensionName = Piston
+		suspensionExtPos = -0.77182
 		suspensionAxis = 0,0,1
 		wheelRadius = 0.104
 		wheelMass = 0.04
 		suspensionTravel = 0.75
 		suspensionTarget = 0.2
-		suspensionOffset = -0.75
-		suspensionSpring = 400
-		suspensionDamper = 40
+		suspensionOffset = 0
+		suspensionSpring = 100
+		suspensionDamper = 20
 		maxSteeringAngle = 0
 		maxMotorTorque = 0
 		maxBrakeTorque = 300
@@ -336,6 +352,7 @@
 
 //no 'scale' listed, default=1?
 //has rescaleFactor = 1.25
+//LT-02
 @PART[landingLeg1-2]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -351,14 +368,15 @@
 		wheelColliderName = wheelCollider
 		wheelColliderOffset = 0
 		suspensionName = piston
+		suspensionExtPos = 0.53906
 		suspensionAxis = 0,0,-1
 		wheelRadius = 0.12
 		wheelMass = 0.04
 		suspensionTravel = 0.95
 		suspensionTarget = 0.2
-		suspensionOffset = -0.95
-		suspensionSpring = 400
-		suspensionDamper = 40
+		suspensionOffset = 0
+		suspensionSpring = 100
+		suspensionDamper = 20
 		maxSteeringAngle = 0
 		maxMotorTorque = 0
 		maxBrakeTorque = 300
@@ -369,6 +387,7 @@
 	}
 }
 
+//LT-05
 @PART[miniLandingLeg]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -383,14 +402,15 @@
 		wheelColliderName = wheelCollider
 		wheelColliderOffset = 0
 		suspensionName = leg
+		suspensionExtPos = 0.00601
 		suspensionAxis = 0,0,-1
 		wheelRadius = 0.1
 		wheelMass = 0.04
 		suspensionTravel = 0.8
 		suspensionTarget = 0.2
-		suspensionOffset = -0.8
-		suspensionSpring = 400
-		suspensionDamper = 40
+		suspensionOffset = 0
+		suspensionSpring = 100
+		suspensionDamper = 20
 		maxSteeringAngle = 0
 		maxMotorTorque = 0
 		maxBrakeTorque = 300
