--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -84,7 +84,9 @@
   <ItemGroup>
     <Compile Include="Component\KSPWheelCollider.cs" />
     <Compile Include="Component\KSPWheelComponent.cs" />
+    <Compile Include="Component\KSPWheelConstraint.cs" />
     <Compile Include="Component\KSPWheelFrictionCurve.cs" />
+    <Compile Include="Component\KSPWheelStickyConstraint.cs" />
     <Compile Include="Component\LFWheelGrip.cs" />
     <Compile Include="PartModule\KSPWheelAnimationState.cs" />
     <Compile Include="PartModule\KSPWheelState.cs" />
