--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -1,4 +1,4 @@
-//roverWheelS2
+//roverWheelS2 - the probe wheels
 @PART[roverWheel2]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -30,7 +30,8 @@
 		maxBrakeTorque = 12		
 	}
 }
-//roverWheelM1
+
+//roverWheelM1 - the doughnut
 //has rescaleFactor = 1.25 (default, unspecified in config)
 //thus some of these values differ from the stock specified values (no clue how they handle the rescale for wheels...)
 @PART[roverWheel1]
@@ -66,7 +67,7 @@
 	}
 }
 
-//roverWheelTR-2L
+//roverWheelTR-2L - truck wheels
 @PART[wheelMed]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -99,7 +100,7 @@
 	}
 }
 
-//roverWheelXL3
+//roverWheelXL3 - giant tank-steering wheels
 @PART[roverWheel3]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -315,7 +316,42 @@
 	}
 }
 
-//LT-01
+//LT-05 -- 'micro'
+@PART[miniLandingLeg]
+{
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelDeployment]{}
+	-MODULE[ModuleWheelLock]{}
+	-MODULE[ModuleWheelDamage]{}
+	MODULE
+	{
+		name = KSPWheelModule
+		animationName = probeleg
+		wheelColliderName = wheelCollider
+		wheelColliderOffset = 0
+		suspensionName = leg
+		suspensionExtPos = 0.00601
+		suspensionAxis = 0,0,-1
+		wheelRadius = 0.1
+		wheelMass = 0.04
+		suspensionTravel = 0.75
+		suspensionTarget = 0.2
+		suspensionOffset = 0
+		suspensionSpring = 100
+		suspensionDamper = 20
+		maxSteeringAngle = 0
+		maxMotorTorque = 0
+		maxBrakeTorque = 300
+		brakesLocked = true
+		
+		loadRating = 0.5
+		minLoadRating = 0.1
+		maxLoadRating = 1
+	}
+}
+
+//LT-01 -- 'medium'
 @PART[landingLeg1]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -335,7 +371,7 @@
 		suspensionAxis = 0,0,1
 		wheelRadius = 0.104
 		wheelMass = 0.04
-		suspensionTravel = 0.75
+		suspensionTravel = 0.90
 		suspensionTarget = 0.2
 		suspensionOffset = 0
 		suspensionSpring = 100
@@ -347,12 +383,16 @@
 		bogeyName = foot
 		bogeyRotAxis = 1, 0, 0
 		bogeyUpAxis = 0, -1, 0
+		
+		loadRating = 1.5
+		minLoadRating = 0.5
+		maxLoadRating = 5
 	}
 }
 
 //no 'scale' listed, default=1?
 //has rescaleFactor = 1.25
-//LT-02
+//LT-02 -- 'large'
 @PART[landingLeg1-2]
 {
 	-MODULE[ModuleWheelBase]{}
@@ -370,9 +410,9 @@
 		suspensionName = piston
 		suspensionExtPos = 0.53906
 		suspensionAxis = 0,0,-1
-		wheelRadius = 0.12
+		wheelRadius = 0.15
 		wheelMass = 0.04
-		suspensionTravel = 0.95
+		suspensionTravel = 0.9
 		suspensionTarget = 0.2
 		suspensionOffset = 0
 		suspensionSpring = 100
@@ -384,36 +424,9 @@
 		bogeyName = foot
 		bogeyRotAxis = 1, 0, 0
 		bogeyUpAxis = 0, -1, 0
-	}
-}
-
-//LT-05
-@PART[miniLandingLeg]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelDeployment]{}
-	-MODULE[ModuleWheelLock]{}
-	-MODULE[ModuleWheelDamage]{}
-	MODULE
-	{
-		name = KSPWheelModule
-		animationName = probeleg
-		wheelColliderName = wheelCollider
-		wheelColliderOffset = 0
-		suspensionName = leg
-		suspensionExtPos = 0.00601
-		suspensionAxis = 0,0,-1
-		wheelRadius = 0.1
-		wheelMass = 0.04
-		suspensionTravel = 0.8
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 100
-		suspensionDamper = 20
-		maxSteeringAngle = 0
-		maxMotorTorque = 0
-		maxBrakeTorque = 300
-		brakesLocked = true
+		
+		loadRating = 2.5
+		minLoadRating = 1.0
+		maxLoadRating = 8.0
 	}
 }
