* more work on stock module   * implement basic resource drain functionality; drain = configAmount*torque   * add gui display for ec use (needs cleanup/finishing)   * clean up rpm limit functionality

--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -21,13 +21,14 @@
 		wheelRadius = 0.1575
 		wheelMass = 0.040
 		suspensionTravel = 0.195
-		suspensionTarget = 0.2
+		suspensionTarget = 0.5
 		suspensionOffset = 0
 		suspensionSpring = 25
 		suspensionDamper = 4
 		maxSteeringAngle = 40
 		maxMotorTorque = 0.5
-		maxBrakeTorque = 12		
+		maxBrakeTorque = 12
+		resourceAmount = 0.25
 	}
 }
 
@@ -56,14 +57,18 @@
 		bustedWheelName = wheelDamaged
 		wheelRadius = 0.47375
 		wheelMass = 0.40
-		suspensionTravel = 0.25
-		suspensionTarget = 0.2
+		suspensionTravel = 0.3
+		suspensionTarget = 0.5
 		suspensionOffset = 0
 		suspensionSpring = 100
 		suspensionDamper = 20
 		maxSteeringAngle = 30
 		maxMotorTorque = 10
 		maxBrakeTorque = 10
+		resourceAmount = 0.25
+		loadRating = 1.25
+		minLoadRating = 0.1
+		maxLoadRating = 2
 	}
 }
 
@@ -90,13 +95,14 @@
 		wheelRadius = 0.58
 		wheelMass = 0.040
 		suspensionTravel = 0.125
-		suspensionTarget = 0.2
+		suspensionTarget = 0.5
 		suspensionOffset = 0
 		suspensionSpring = 100
 		suspensionDamper = 20
 		maxSteeringAngle = 30
 		maxMotorTorque = 58
-		maxBrakeTorque = 12		
+		maxBrakeTorque = 12
+		resourceAmount = 0.25	
 	}
 }
 
@@ -121,14 +127,15 @@
 		wheelRadius = 1
 		wheelMass = 0.8
 		suspensionTravel = 0.25
-		suspensionTarget = 0.2
+		suspensionTarget = 0.5
 		suspensionOffset = 0
 		suspensionSpring = 400
 		suspensionDamper = 80
 		maxSteeringAngle = 0
 		tankSteering = true
 		maxMotorTorque = 50
-		maxBrakeTorque = 40		
+		maxBrakeTorque = 40
+		resourceAmount = 0.25
 	}
 }
 
